nueva tabla model

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,5 +10,8 @@
     <li><a href="#">Probador virtual (esto desp lo sacamos)</a></li>
     
     <li><a href="#" target="_blank">E-commerce institucional</a></li>
+
+    <li><a href="/_dev/imgs_to_svg">Imgs a svg</a></li>
+    <li><a href="/_dev/glb_a_cara">GLB a cara</a></li>
 </ul>
 {% endblock %}
