--- a/app/templates/home_admin.html
+++ b/app/templates/home_admin.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>Benvenuto!</h1>
+    <h1>Bienvenido!</h1>
     <a href="/logout" class="btn btn-outline-primary" style="float:right">Logout</a>
     <a href="{{ url_for('main.agregar_lente') }}" class="btn btn-primary" style="float:right">Agregar</a>
     <h3>Modelos de lentes</h3>
@@ -21,23 +21,23 @@
             </tr>
         </thead>
         <tbody>
-            {% for lente in lentes %}
+            {% for lente in models %}
             <tr>
-                <td><img src="{{lente.imagen}}" style="height: 35px; width: 35px;;"></td>
-                <td>{{lente.id}}</td>
-                <td>{{lente.nombre}}</td>
+                <td><img src="{{lente.path_to_img_front}}" style="height: 35px; width: 35px;;"></td>
+                <td>{{lente.model_id}}</td>
+                <td>{{lente.name}}</td>
                 <td>
-                    <a href="{{ url_for('main.lente_detalle', lente_id=lente.id) }}" class="btn btn-sm btn-outline-secondary" title="Editar">
+                    <a href="{{ url_for('main.lente_detalle', lente_id=lente.model_id) }}" class="btn btn-sm btn-outline-secondary" title="Editar">
                         <i class="fas fa-pencil-alt"></i>
                     </a>
-                    <button class="btn btn-sm btn-outline-info toggle-visible" data-id="{{ lente.id }}" title="Visibilidad">
+                    <button class="btn btn-sm btn-outline-info toggle-visible" data-id="{{ lente.model_id }}" title="Visibilidad">
                         {% if lente.visible %}
                             <i class="fas fa-eye"></i>
                         {% else %}
                             <i class="fas fa-eye-slash"></i>
                         {% endif %}
                     </button>
-                    <button class="btn btn-sm btn-outline-danger delete-lente" data-id="{{ lente.id }}" title="Eliminar">
+                    <button class="btn btn-sm btn-outline-danger delete-lente" data-id="{{ lente.model_id }}" title="Eliminar">
                         <i class="fas fa-trash"></i>
                     </button>
                 </td>
