--- a/app/templates/lente_detalle.html
+++ b/app/templates/lente_detalle.html
@@ -101,7 +101,7 @@
           <div class="card-header">Imagen frente (aplanada)</div>
           <div class="card-body d-flex align-items-center justify-content-center" style="min-height:180px;">
             {% if ar_model.path_to_img_front_flattened %}
-              <img src="/{{ ar_model.path_to_img_front_flattened }}" alt="Frente aplanada" class="img-fluid">
+              <img src="{{ ar_model.path_to_img_front_flattened }}" alt="Frente aplanada" class="img-fluid">
             {% else %}
               <span class="text-muted">Sin archivo</span>
             {% endif %}
@@ -118,7 +118,7 @@
           <div class="card-header">Imagen perfil (aplanada)</div>
           <div class="card-body d-flex align-items-center justify-content-center" style="min-height:180px;">
             {% if ar_model.path_to_img_side_flattened %}
-              <img src="/{{ ar_model.path_to_img_side_flattened }}" alt="Perfil aplanada" class="img-fluid">
+              <img src="{{ ar_model.path_to_img_side_flattened }}" alt="Perfil aplanada" class="img-fluid">
             {% else %}
               <span class="text-muted">Sin archivo</span>
             {% endif %}
@@ -135,7 +135,7 @@
           <div class="card-header">Imagen patilla (aplanada)</div>
           <div class="card-body d-flex align-items-center justify-content-center" style="min-height:180px;">
             {% if ar_model.path_to_img_temple_flattened %}
-              <img src="/{{ ar_model.path_to_img_temple_flattened }}" alt="Patilla aplanada" class="img-fluid">
+              <img src="{{ ar_model.path_to_img_temple_flattened }}" alt="Patilla aplanada" class="img-fluid">
             {% else %}
               <span class="text-muted">Sin archivo</span>
             {% endif %}
@@ -152,7 +152,7 @@
           <div class="card-header">Imagen fondo (aplanado)</div>
           <div class="card-body d-flex align-items-center justify-content-center" style="min-height:180px;">
             {% if ar_model.path_to_img_bg_flattened %}
-              <img src="/{{ ar_model.path_to_img_bg_flattened }}" alt="Fondo aplanado" class="img-fluid">
+              <img src="{{ ar_model.path_to_img_bg_flattened }}" alt="Fondo aplanado" class="img-fluid">
             {% else %}
               <span class="text-muted">Sin archivo</span>
             {% endif %}
@@ -164,7 +164,7 @@
       </div>
 
       <div class="col-12 mb-3 text-end">
-        <a href="{{ url_for('main.aplanar_imagenes') }}" target="_blank" class="btn btn-info text-light btn-block">Helper para generarlas</a>
+        <a href="{{ url_for('main.aplanar_imagenes',model_id=ar_model.model_id) }}" target="_blank" class="btn btn-info text-light btn-block">Helper para generarlas</a>
       </div>
     </div>
 
@@ -236,7 +236,7 @@
       </div>
 
       <div class="col-12 mb-3 text-end">
-        <a href="{{ url_for('main.imgs_to_svg') }}" target="_blank" class="btn btn-info text-light btn-block">Helper para generarlos</a>
+        <a href="{{ url_for('main.imgs_to_svg', model_id=ar_model.model_id) }}" target="_blank" class="btn btn-info text-light btn-block">Helper para generarlos</a>
       </div>
     </div>
 
